--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http45</artifactId>
+			<version>1.39.0</version> <!-- ya latest from Maven Central -->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
