--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,27 @@
 spring.application.name=spendsnap
 
-server.port = 8081
+# Server settings
+server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spendsnap
-spring.datasource.username=root
-spring.datasource.password=Abhijeet@188333
+# Database connection
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
+# JPA & Hibernate change --->spring.jpa.hibernate.ddl-auto=update  before deploying
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Show full stack trace
-server.error.include-message=always
-server.error.include-binding-errors=always
-
-
+# Error handling
+server.error.include-message=never
+server.error.include-binding-errors=never
 server.error.whitelabel.enabled=false
 
-server.servlet.session.timeout=180
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#cloudinary all properties
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+
