Implemented email OTP verification flow

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,21 @@
 			<version>1.39.0</version> <!-- ya latest from Maven Central -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<!-- Source: https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+			<scope>compile</scope>
+		</dependency>
+
+
+
 
 	</dependencies>
 
