--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spendsnap
 
 # Server settings
-server.port=8081
+server.port=8080
 
 spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${MYSQLUSER}
@@ -23,9 +23,13 @@ cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-spring.mail.host=smtp.gmail.com
+#email configurations
+spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
 spring.mail.username=${EMAIL}
 spring.mail.password=${EMAILPASSWORD}
-spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+
