Brevo api use for email sending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,13 +23,10 @@ cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-#email configurations
-spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
-spring.mail.username=${EMAIL}
-spring.mail.password=${EMAILPASSWORD}
+brevo.api.key=${BREVO_API_KEY}
+brevo.api.url=https://api.brevo.com/v3/smtp/email
+
+
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.auth=true
-
-
